--- a/package.json
+++ b/package.json
@@ -21,6 +21,10 @@
     "brain-games": "bin/brain-games.js"
   },
   "dependencies": {
+    "eslint": "^7.25.0",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jest": "^24.3.6",
     "readline-sync": "^1.4.10"
   }
 }
